LPS-60972 Move Liferay-specific test JVM args into plugin